# aurion

./: README.md
backend/: .env  .gitignore  AUDIT_CHECKLIST.md  foundry.toml  package-lock.json
backend/cache/: solidity-files-cache.json  test-failures
backend/contracts/adapters/: AaveAdapter.sol  CompoundAdapter.sol
backend/contracts/core/: CreditAccount.sol  CreditManager.sol  CreditRouter.sol
backend/contracts/faucet/: TokenFaucet.sol
backend/contracts/fees/: FeeController.sol  LiquidationController.sol
backend/contracts/governance/: CreditGovernor.sol  RiskCouncil.sol
backend/contracts/insurance/: InsuranceFund.sol
backend/contracts/interfaces/: IAave.sol  ICompound.sol  ICreditManager.sol  ICreditScoreEngine.sol
backend/contracts/libraries/: Errors.sol  RiskMath.sol
backend/contracts/oracle/: CreditOracle.sol
backend/contracts/pools/: CreditPool.sol  InsurancePool.sol  PoolRegistry.sol
backend/deployments/: 421614.json  arbitrumSepolia.json
backend/script/: Deploy.s.sol  DeploySepolia.s.sol  RedeployAave.s.sol
backend/stylus/: Cargo.toml  lib.rs  rust-toolchain.toml
backend/stylus/src/: lib.rs
backend/test/: BaseTest.sol
backend/test/fork/: AaveBorrow.t.sol  CompoundBorrow.t.sol  ForkBase.t.sol
backend/test/integration/: AaveIntegration.t.sol
backend/test/invariants/: CreditInvariants.t.sol  ForkInvariant.t.sol
backend/test/mocks/: MockAaveAdapter.sol  MockAavePool.sol  MockCToken.sol  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  wagmi.js
frontend/src/: App.jsx  index.css  main.jsx  wagmi.js
(+89 files in other folders)
