[package]
name = "credit-score-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stylus-sdk = "0.10.7"
alloy-primitives = "1.0"
alloy-sol-types = "1.0"

[dev-dependencies]
stylus-sdk = { version = "0.10.7", features = ["stylus-test"] }

[features]
export-abi = []
contract-client-gen = []

[profile.release]
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"
opt-level = "z"
overflow-checks = false